Ajusto swagger y body para crear wallet
